--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Weather Journal</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.scss">
   </head>
 
   <body>
@@ -34,7 +34,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js" type="text/javascript"></script>
 
   </body>
 
