Add code for first API call (GeoNames)

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,9 +22,9 @@
 
       <div class="row">
         <div class="col">
-          <div class="holder zip">
-            <label for="zip">Enter Zipcode here</label>
-            <input type="text" id="zip" placeholder="enter zip code here">
+          <div class="holder city">
+            <label for="city">Enter Zipcode here</label>
+            <input type="text" id="city" placeholder="enter city name here">
           </div>
         </div>
         <div class="col">
