--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -27,12 +27,9 @@
             <label for="city">enter City name here</label>
             <input type="text" id="city" placeholder="enter city name here">
           </div>
-        </div>
-        <div class="col">
-          <div class="holder feel">
-            <label for="feelings">How are you feeling today?</label>
-            <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9"
-              cols="50"></textarea>
+          <div class="holder date">
+            <label for="start">Start date:</label>
+            <input type="date" id="start" name="trip-start" value="2021-02-01" min="2021-02-01" max="2022-12-31">
             <button id="generate" type="submit"> Generate </button>
           </div>
         </div>
