Add endDate to form

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -30,7 +30,9 @@
           <div class="holder date">
             <label for="start">Start date:</label>
             <input type="date" id="start" name="trip-start" value="2021-02-01" min="2021-02-01" max="2022-12-31">
-            <button id="generate" type="submit"> Generate </button>
+            <label for="end">End date:</label>
+            <input type="date" id="end" name="trip-end" value="2021-02-01" min="2021-02-01" max="2022-12-31">
+            <button id="generate" type="submit"> Submit </button>
           </div>
         </div>
       </div>
