Modify lots on JS to get API calls to returun console.logs

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -42,12 +42,17 @@
         </br>
         </br>
         </br>
-        <div class="holder entry">
-          <div class="title">Most Recent Entry</div>
-          <div id="entryHolder">
-            <div id="date"></div>
-            <div id="temp"></div>
-            <div id="content"></div>
+        <div class="row">
+          <div class="col">
+            <h2>Trip details</h2>
+            <div class="holder entry">
+              <div class="title">Most Recent Entry</div>
+              <div id="entryHolder">
+                <div id="dates"></div>
+                <div id="forecast"></div>
+                <div id="image"></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
