Change mostly design

--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -1,15 +1,41 @@
 body {
-    background: #fffff8;
+    background: #f8b195;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+#banner {
+    display: grid;
+    grid-auto-rows: minmax(150px, auto);
+    grid-template-columns: auto;
+    height: 15vh;
+    color: #355c7d;
+    justify-content: center;
+    grid-gap: 1em;
+    font-size: 20px;
+    font-family: 'Oswald',
+        sans-serif;
+}
+
+#trip {
+    display: grid;
+    grid-auto-rows: minmax(150px, auto);
+    grid-template-columns: auto;
+    height: 50vh;
+    color: #355c7d;
+    justify-content: center;
+    grid-gap: 1em;
+    font-size: 20px;
+    font-family: 'Oswald',
+        sans-serif;
 }
 
 #app {
     display: grid;
     grid-auto-rows: minmax(150px, auto);
     grid-template-columns: auto;
-    height: 100vh;
-    background: #f23557;
-    color: #f0d43a;
+    height: 50vh;
+    background: #6c5b7b;
+    color: #fff;
     justify-content: center;
     grid-gap: 1em;
     font-size: 20px;
@@ -23,7 +49,7 @@ body {
 }
 
 #entryHolder {
-    color: #f0d43a;
+    color: #f67280;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
     border: none;
@@ -54,8 +80,8 @@ input {
     display: block;
     height: 60px;
     width: 1000px;
-    background: #22b2da;
-    color: #f0d43a;
+    background: #f67280;
+    color: #6c5b7b;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
     border: none;
@@ -66,8 +92,8 @@ button {
     width: 400px;
     height: 100px;
     margin: 50px;
-    background: #3b4a6b;
-    color: #f0d43a;
+    background: #355c7d;
+    color: #fff;
     font-size: 26px;
     font-family: 'Oswald', sans-serif;
     border: none;
@@ -82,8 +108,8 @@ textarea {
     display: block;
     height: 200px;
     width: 1000px;
-    background: #22b2da;
-    color: #f0d43a;
+    background: #f67280;
+    color: #6c5b7b;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
 }
