--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -57,7 +57,7 @@
             <div class="holder entry">
               <div class="title">Here are your most recent upcoming trip details:</div>
               <div id="entryHolder">
-                <div id="city"></div>
+                <div id="cityResult"></div>
                 <div id="dates"></div>
                 <div id="forecast"></div>
                 <div id="image"></div>
